static/styles.css
/* TABLE OF CONTENTS

-base
-color
-position
-direct
-border
-button
-backgrounds
-other

*/

/* List of useful things to know

-You can do CTRL+SHIFT+R to refresh the page wwith no cache!!

-IMAGES - ALL will be forced to 64x64. Can be overwritten by making a class such as "resizeImg128" to change the "max-width"

*/

:root {
    --text: #632d16;
    --horzLines: #c4876d;
    --background: #52382c;
    --div: #f9c49a;
    --borderAndLines: #411b0b;
    --diffColorTable: #ebb68c;
    --imageBackground: rgb(27, 27, 27);
    --borderCommon: grey;
    --borderUncommon: green;
    --borderRare: darkblue;
    --borderLegendary: gold;
    --borderMythic: red;
    --borderUnique: purple;

    --borderWidth: 3px;
  }

/*===================

    base

===================*/

html{
    background-color: var(--background);
    background-image: url("/static/pattern2.png");
    background-repeat: repeat;
    min-height: 100vh;
}

body{
    background-color: var(--background);
    background-image: url("/static/pattern2.png");
    background-repeat: repeat;
    color: var(--text);
    font-family: "Tahoma";
    min-height: 100vh;
}

/*
div{
    background-color: var(--background);
    background-image: url("/static/pattern2.png");
    background-repeat: repeat;
}
*/

hr{
    border-top: 6px solid var(--horzLines);
}

img{
    max-width:64px; 
    height:auto;
    border: var(--text) var(--borderWidth) solid;
    background-color: var(--imageBackground);
}

ul{
    list-style-type: none;
    width: auto;
    padding: 0px;
    margin: 0px;
}

/*===================

    color

===================*/

.background{
    background-color: var(--div);
    background-image: url("/static/pattern.png");
    background-repeat: repeat;
}

.backgroundDark{
    background-color: var(--background);
    background-image: url("/static/pattern2.png");
    background-repeat: repeat;
}

.tableColColor{
    background-color: var(--diffColorTable);
    background-image: url("/static/pattern.png");
    background-repeat: repeat;
}

.textColor{
    color: var(--text);
}

.textColorDarker{
    color: var(--background);
}

.textColorLighter{
    color: var(--div);
}

.textGreen{
    color: green;
}

/*===================

    position

===================*/

.alignCenter{
    text-align: center;
}

.alignLeft{
    text-align: left;
}

.alignRight{
    text-align: right;
}

.header{
    width: 100%;
    text-align: center;
    background-color: var(--div);
    background-image: url("/static/pattern.png");
    background-repeat: repeat;
}

.spacing{
    padding: 8px 16px;
    margin-top: 16px;
    margin-right: 30px;
}

.sameLine{
    display: inline;
}

.blockLine{
    display: inline;
}

.loadingScreen{
    position:fixed;
    padding:0;
    margin:0;

    top:0;
    left:0;

    text-align: center;

    width: 100%;
    height: 100%;
    background-color: var(--background);
    background-image: none;
    opacity: 1;
}

.loadingScreenFade{
    opacity: 0;
    transition: opacity 0.5s;
}

.loadingScreen h1{
    font-size: 60px;
    line-height: 600px;
    color:#ebb68c;
}

.leftRightTable td:nth-child(odd){
    text-align: left;
}

.leftRightTable td:nth-child(even){
    text-align: right;
}

.leftRightTable h5,p{
    display: inline;
}

.leftRightTable button{
    display: inline;
    background-color: var(--background);
    color: white;
    font-size: 12px;
    padding: 0px 2px;
    margin: 0px;
    border-radius: 2px;
    border: 1px solid #301f17;
}

.divSameLineElements h1, .divSameLineElements h2, .divSameLineElements h3, .divSameLineElements h4, .divSameLineElements h5, .divSameLineElements p, .divSameLineElements img{
    display: inline;
}

/*===================

    direct

===================*/

/* Will be used by almost every page */
#container {
    width: 80%;
    text-align: center;
    margin-right: auto;
    margin-left: auto;
}

/* characterCreation.html */

#characterCreationProgressBar{
    text-align: center;
    background-color: var(--background);
}

#characterCreationProgressBar h2{
    display: inline;
    font-weight: bold;
}

#pickClassSection div div{
    width: 300px;
    height: 500px;
    vertical-align: top;
    display: inline-block;
}

#pickClassSection div div p{
    color: var(--text);
    padding: 0px;
}

#pickAvatarSection div img{
    max-width: 128px;
    height: auto;
    background-color: var(--background);
    margin: 12px;
}

/* signin.html AND signup.html */

#signinContainer{
    width: 300px;
    text-align: center;
    margin-right: auto;
    margin-left: auto;
    padding: 20px;
}

#signinContainer input{
    margin: 4px;
}

#signinContainer a{
    color: var(--text);
}

/* dashboard.html */

.sidePanel{
    display: inline-block;
    width: 18%;
    vertical-align: top;
    height: auto;
}

.sidePanel div{
    background-color: var(--div);
    background-image: url("/static/pattern.png");
    background-repeat: repeat;
}

.sidePanel table{
    width: 100%;
}

.sidePanel tr:nth-child(even) {
    background-color: var(--diffColorTable);
    background-image: url("/static/pattern3.png");
    background-repeat: repeat;
}

.mainPanel{
    display: inline-block;
    width: 35%;
    vertical-align: top;
    height: auto;
}

.mainPanel div{
    background-color: var(--div);
    background-image: url("/static/pattern.png");
    background-repeat: repeat;
}

.infoPanel{
    display: inline-block;
    width: 35%;
    height: auto;
    text-align: center;
}

.inventory{
    padding: 0px;
    margin: 0px;
    border: none;
    font-size: 0;
}

.inventory div{
    display: block;
}

/*===================

    border

===================*/

.border{
    border: var(--borderAndLines);
    border-radius: 8px;
    border-width: 8px;
    border-style: solid;
}

.itemBorderCommon{
    border: var(--borderWidth) solid var(--borderCommon);
}

.itemBorderUncommon{
    border: var(--borderWidth) solid var(--borderUncommon);
}

.itemBorderRare{
    border: var(--borderWidth) solid var(--borderRare);
}

.itemBorderLegendary{
    border: var(--borderWidth) solid var(--borderLegendary);
}

.itemBorderMythic{
    border: var(--borderWidth) solid var(--borderMythic);
}

.itemBorderUnique{
    border: var(--borderWidth) solid var(--borderUnique);
}

/*===================

    button

===================*/

.themeSmallButton{
    background-color: var(--background);
    color: white;
    font-size: 16px;
    padding: 2px 4px;
    border-radius: 8px;
    border: 4px solid #301f17;
}

.themeMediumButton{
    background-color: var(--background);
    color: white;
    font-size: 18px;
    padding: 4px 8px;
    border-radius: 4px;
    border: 4px solid #301f17;
}

.themeBigButton{
    background-color: var(--background);
    color: white;
    font-size: 20px;
    padding: 8px 16px;
    border-radius: 4px;
    border: 4px solid #301f17;
}

.themeSmallButton:hover, .themeMediumButton:hover, .themeBigButton:hover{
    background-color: #301f17;
}

/*===================

    backgrounds

===================*/

.background_signin{
    background-image: url('/static/backgrounds/background_signin.jpg');
}

.background_dashboard{
    background-image: url('/static/backgrounds/background_dashboard.jpg');
}

.background_quests{
    background-image: url('/static/backgrounds/background_quests.jpg');
}

.background_gathering{
    background-image: url('/static/backgrounds/background_gathering.jpg');
}

.background_bounties{
    background-image: url('/static/backgrounds/background_bounties.jpg');
}

.background_dungeons{
    background-image: url('/static/backgrounds/background_dungeons.jpg');
}

.background_arena{
    background-image: url('/static/backgrounds/background_arena.jpg');
}

.background_house{
    background-image: url('/static/backgrounds/background_house.jpg');
}

.background_offerings{
    background-image: url('/static/backgrounds/background_offerings.jpg');
}

.background_leaderboard{
    background-image: url('/static/backgrounds/background_leaderboard.jpg');
}

/*===================

    other

===================*/

/* NAV BAR */
.nav.navbar-nav li a {
    color: var(--background);
    background-color: var(--div);
    background-image: url("/static/pattern.png");
    background-repeat: repeat;
    font-weight: bold;
}

.nav.navbar-nav li a:hover {
    background-color: var(--background);
    background-image: url("/static/pattern2.png");
    background-repeat: repeat;
}

.navbar-inverse .navbar-brand{ 
    color: white;
    background-color: var(--background);
    background-image: url("/static/pattern2.png");
    background-repeat: repeat;
    font-weight: bold;
}

.navbar-inverse .navbar-brand:hover{ 
    filter: brightness(0.85);
}

.resizeImg128{
    max-width:128px; 
    height:auto;
    margin: 0px;
    padding: 0px;
}

.iconImg{
    display: inline;
    background-color: rgba(0, 0, 0, 0);
    max-width: 32px;
    height: auto;
    border: none;
}

.imgLocked{
    border-color: #5f5f5f;
}

.slider {
    -webkit-appearance: none;
    appearance: none;
    width: 100%;
    height: 25px;
    background: var(--background);
    outline: var(--borderAndLines) solid 3px;
}

.slider::-webkit-slider-thumb {
    appearance: none;
    width: 20px;
    height: 20px;
    background: var(--horzLines);
}

/* COULD USE THESE TO MAKE MORE ITEMS */
.saturate { filter: saturate(3); }
.grayscale { filter: grayscale(100%); }
.contrast { filter: contrast(160%); }
.brightness { filter: brightness(0.25); }
.blur { filter: blur(3px); }
.invert { filter: invert(100%); }
.sepia { filter: sepia(100%); }
.huerotate { filter: hue-rotate(180deg); }
.rss.opacity { filter: opacity(50%); }

